# ensens_addon_crowpanel_meteo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
scripts/: build.ps1  test_build.ps1
sources/: CMakeLists.txt  idf_component.yml  main.cpp
sources/adapters/: HTTPRequest.h
sources/adapters/lvgl/: Button.h  ExpandableBlock.h  FlexContainer.h  Image.h  LabelBase.h  LvglObject.h  Menu.h  MenuPage.h  ScreenBase.h  SimpleLabel.h  lvgl_port_v8.cpp  lvgl_port_v8.h
sources/certs/: OpenWeatherCACert.h
sources/entities/: Aggregator.cpp  Aggregator.h  BM8563.cpp  BM8563.h  Brightness.cpp  Brightness.h  CurrentTime.cpp  CurrentTime.h  EnvironmentalSensorData.h  I2CLockGuard.h  Location.cpp  Location.h  UART.h  Units.cpp  Units.h  WIFI.cpp  WIFI.h  Weather.cpp  Weather.h  settings.h  timestamp.h
sources/entities/ui/Dashboard/: Dashboard.cpp  Dashboard.h
sources/entities/ui/components/: common.cpp  common.h  pressure_box.cpp  pressure_box.h
sources/entities/ui/fonts/: Montserrat_96.c  saira_condensed_medium.c
sources/entities/ui/sensors_settings/: SensorSettings.h
sources/entities/ui/weather_screen/: CurrentWeatherBody.h  ForecastTable.h  Header.h  TodayForecastTable.h  WeatherScreen.h
sources/entities/ui/weather_screen/elements/: DayLabel.h  DescriptionLabel.h  LocationLabel.h  ParameterLabel.h  SmallTimestampLabel.h  TimeZoneLabel.h  WeatherIcon.h  WifiLabel.h
sources/entities/ui/wifi_screen/: BrightnessBlock.cpp  BrightnessBlock.h  LocationConfiguration.cpp  LocationConfiguration.h  SensorSelectionBlock.cpp  SensorSelectionBlock.h  TimestampBlock.cpp  TimestampBlock.h  UnitsBlock.cpp  UnitsBlock.h  WifiConnection.cpp  WifiConnection.h  WifiScreen.cpp  WifiScreen.h  WifiScreenHeader.cpp  WifiScreenHeader.h
sources/entities/ui/wifi_screen/elements/: AccessPointItem.cpp  AccessPointItem.h
sources/images/: 01d.c  01n.c  02d.c  02n.c  03d.c  03n.c  04d.c  04n.c  09d.c  09n.c  10d.c  10n.c  11d.c  11n.c  13d.c  13n.c  50d.c  50n.c  back.c  humidity.c  pressure.c  settings.c  sunrise.c  sunset.c  temperature.c  wifi_100.c  wifi_25.c  wifi_50.c  wifi_75.c  wind.c
sources/images/dark_theme/: 13d.c  13n.c  50d.c  50n.c  aqi.c  co2.c  humidity.c  pressure.c  settings.c  temperature.c  wifi_100.c  wifi_25.c  wifi_50.c  wifi_75.c  wind.c
sources/usecases/: AccessPointsUpdate.cpp  AccessPointsUpdate.h
